# ani-cli

./: .Cargo.toml.un~  .gitignore  Cargo.toml  README.md
src/: command_map.rs  main.rs
src/commands/: info.rs  mod.rs  update.rs
