[package]
name = "ani-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ani-core = { path = "../ani-core" }
anyhow = "1.0.95"
thiserror = "1.0"
clap = { version = "4.5.30", features = ["derive"] }
console = "0.15.10"
reqwest = { version = "0.11", features = ["json", "native-tls", "blocking"] }
indicatif = "0.17.11"
serde = { version = "1", features = ["derive"] } 
serde_json = "1.0.138"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = [ "full" ] }
